# ser-snapshot-diff-automation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
docs/: install.md  reports.md
pyinstaller/: ser-diff-gui.spec
reports/: sample_EXPOSURE_SAMPLE-EXP.json  sample_EXPOSURE_SAMPLE-EXP_added.csv  sample_EXPOSURE_SAMPLE-EXP_removed.csv  sample_EXPOSURE_SAMPLE-EXP_summary.csv  sample_EXPOSURE_SAMPLE-EXP_updated.csv  sample_SER_SAMPLE-SER.json  sample_SER_SAMPLE-SER_added.csv  sample_SER_SAMPLE-SER_removed.csv  sample_SER_SAMPLE-SER_summary.csv  sample_SER_SAMPLE-SER_updated.csv
samples/: EXPOSURE_after.xml  EXPOSURE_before.xml  SER_after.xml  SER_before.xml
serdiff/: __init__.py  cli.py  diff.py  presets.py
src/serdiff/: __init__.py  cli.py  config.py  detect.py  diff.py  entrypoints.py  gui_runner.py  gui_utils.py  presets.py  report_html.py  report_xlsx.py
tests/: test_auto_key_fallback_duplicates.py  test_auto_mode_ser_ns.py  test_canonical_json.py  test_cli.py  test_cli_import_smoke.py  test_cli_zero_rows_message.py  test_config_loader.py  test_diff.py  test_doctor_command.py  test_entrypoints_run_diff_paths.py  test_explain_output.py  test_gui_import_headless.py  test_gui_open_behavior.py  test_gui_smoke.py  test_html_report.py  test_import_absolute.py  test_report_html_json_embed.py  test_ser_diff_composite_keys.py  test_ser_namespace_parsing.py  test_windows_paths_do_not_break.py  test_xlsx_report.py  test_zero_row_diagnostics.py
tests/fixtures/: SER_after_ns.xml  SER_before_ns.xml
