[project]
name = "ser-snapshot-diff"
version = "0.1.0"
description = "CLI for diffing PolicyCenter SER and Exposure Type XML exports"
authors = [{name = "SER Snapshot Diff Automation", email = "eng@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ser-diff = "serdiff.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1",
  "black>=23.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N"]
ignore = ["E501"]
per-file-ignores = {"tests/*" = ["S101"]}
