[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ser-snapshot-diff"
version = "0.1.0"
description = "CLI for diffing PolicyCenter SER and Exposure Type XML exports"
authors = [{name = "SER Snapshot Diff Automation", email = "eng@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
ser-diff = "serdiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py312"]
include = "\\.pyi?$"
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.mypy_cache
  | \.ruff_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
exclude = [
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N"]
ignore = ["E501"]
per-file-ignores = {"tests/*" = ["S101"]}
